// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="customBullet"
  >
    <span>
      <i
        class="root"
        style="width: 14px; height: 14px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M448 149.333l-256 256L74.667 288l30.08-30.08L192 344.96l225.92-225.707 30.08 30.08z"
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    class="root sizeScale3"
  >
    Hello World
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      •
    </span>
  </div>
  <span
    class="root sizeScale3"
  >
    Hello World!
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<ol
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale3"
  >
    Hello World!
  </span>
</ol>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale3"
  >
    Hello World!
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<li
  class="root variantSecondary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale3"
  >
    Hello World!
  </span>
</li>
`;
